work on function page 1 and 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
+node_modules
+wireframe
+music
+pnl
+coldplay
+fakear
+gradur
+jul
+justice
+mome
+sethgueko
+theweeknd
 
+/node_modules
+/wireframe
+/music
+/pnl
+/coldplay
+/fakear
+/gradur
+/jul
+/justice
+/mome
+/sethgueko
+/theweeknd
 
