--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> develop
+
   "name": "test",
   "version": "1.0.0",
   "description": "",
@@ -18,8 +15,7 @@
     "read-stream": "^2.1.1",
     "socket.io": "^1.7.1"
   }
-<<<<<<< HEAD
-=======
+
     "name": "music-project",
     "version": "1.0.0",
     "description": "Node Express test",
@@ -32,10 +28,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "main": "musicProject.js",
+    "main": "app.js",
     "author": "SombreDevAgency",
     "license": "ISC",
->>>>>>> 4ac9c18b604ca34a88fb137b0f22a22ef505a8db
-=======
->>>>>>> develop
+
 }
